// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpackConfig > should allow to append and prepend plugins 1`] = `
[
  DefinePlugin {
    "definitions": {
      "foo": "2",
    },
  },
  {
    "name": "RsbuildCorePlugin",
  },
  MiniCssExtractPlugin {
    "_sortedModulesCache": WeakMap {},
    "options": {
      "chunkFilename": "static/css/async/[name].css",
      "experimentalUseImportModule": undefined,
      "filename": "static/css/[name].css",
      "ignoreOrder": true,
      "runtime": true,
    },
    "runtimeOptions": {
      "attributes": undefined,
      "insert": undefined,
      "linkType": "text/css",
    },
  },
  HtmlWebpackPlugin {
    "options": {
      "base": false,
      "cache": true,
      "chunks": [
        "index",
      ],
      "chunksSortMode": "auto",
      "compile": true,
      "entryName": "index",
      "excludeChunks": [],
      "favicon": false,
      "filename": "index.html",
      "hash": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "minify": "auto",
      "publicPath": "auto",
      "scriptLoading": "defer",
      "showErrors": true,
      "template": "",
      "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
      "templateParameters": [Function],
      "title": "Rsbuild App",
      "xhtml": false,
    },
    "userOptions": {
      "chunks": [
        "index",
      ],
      "entryName": "index",
      "filename": "index.html",
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "scriptLoading": "defer",
      "template": "",
      "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
      "templateParameters": [Function],
      "title": "Rsbuild App",
    },
    "version": 5,
  },
  RsbuildHtmlPlugin {
    "getEnvironment": [Function],
    "modifyTagsFn": [Function],
    "name": "RsbuildHtmlPlugin",
    "options": {
      "index": {
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
      },
    },
  },
  DefinePlugin {
    "definitions": {
      "import.meta.env.ASSET_PREFIX": "\\"\\"",
      "import.meta.env.BASE_URL": "\\"/\\"",
      "import.meta.env.DEV": false,
      "import.meta.env.MODE": "\\"none\\"",
      "import.meta.env.PROD": false,
      "process.env.ASSET_PREFIX": "\\"\\"",
      "process.env.BASE_URL": "\\"/\\"",
    },
  },
  ProgressPlugin {
    "compileTime": null,
    "dependenciesCount": 10000,
    "handler": [Function],
    "hasCompileErrors": false,
    "id": "web",
    "modulesCount": 5000,
    "name": "ProgressPlugin",
    "percentBy": null,
    "prettyTime": [Function],
    "profile": false,
    "showActiveModules": false,
    "showDependencies": true,
    "showEntries": true,
    "showModules": true,
  },
  DefinePlugin {
    "definitions": {
      "foo": "1",
    },
  },
]
`;

exports[`webpackConfig > should allow to use tools.webpackChain to modify config 1`] = `
{
  "devtool": "eval",
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
  ],
}
`;

exports[`webpackConfig > should allow tools.webpack to be an array 1`] = `
{
  "devtool": "source-map",
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
  ],
}
`;

exports[`webpackConfig > should allow tools.webpack to be an object 1`] = `
{
  "devtool": "eval",
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
  ],
}
`;

exports[`webpackConfig > should allow tools.webpack to modify config object 1`] = `
{
  "devtool": "eval-cheap-source-map",
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
  ],
}
`;

exports[`webpackConfig > should allow tools.webpack to return config 1`] = `
{
  "devtool": "eval",
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
  ],
}
`;

exports[`webpackConfig > should allow tools.webpackChain to be an array 1`] = `
{
  "devtool": "source-map",
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
  ],
}
`;

exports[`webpackConfig > should provide mergeConfig util in tools.webpack function 1`] = `
{
  "devtool": "eval",
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
  ],
}
`;
